@@ -1,3 +1,7 @@
+2011-02-05  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Fixed bug #17374: implode() issues in Install Tool
+
 2011-02-04  Steffen Kamper  <steffen@typo3.org>
 
 	* Merged em revision 4071
